test/tasty/pos/src-2/tastytest/TestShow.scala
package tastytest

import fplib.allsyntax._

object TestShow extends scala.App
