test/tasty/neg/src-3/ExperimentalClass.scala
package tastytest

import scala.annotation.experimental

@experimental
class ExperimentalClass extends scala.annotation.Annotation
